site/app/stylesheets/_community.scss
.community .column-nav .gutter-right {
  margin-top: 28px;
}

/* Drupal specific markup, we may want to wrap this with a top level selector on body.drupal or something */
.views-field-rss { float: right; }
.views-field-title { font-size: 16px; line-height: 20px; }
.views-field-picture { float: left; margin-right: 6px; }
.view-forum-list .views-field-picture { float: right; margin-left: 6px; }
.block-stats div { display: inline; }
.views-table .views-field-pageviews { white-space: nowrap; }
.views-field-group-name { display: inline; }

.column-nav .view-threads-by-popularity .views-table {
  h4 { display: inline; color: #666; font-size: 13px; line-height: 18px; }
  a { text-decoration: underline; }
  span.views-field-title { display: block; }
  > div { margin-bottom: 15px; }
  .block-stats { clear: both; }
}

.links > a,
.links > span { 
  margin-right: 8px; 
}

.og-mission,
.forum-header-description { 
  margin-bottom: 10px; 
}

.block { @include clearfix(); margin-bottom: 20px; }
.column-nav {
  .view-user-profile-box { margin-bottom: 20px; }
}

.community textarea {
  width: auto;
}

.community form {
  fieldset legend { font-size: 14px; line-height: 18px; }
  .fieldset-wrapper { margin-left: 10px; }
}
.clear-block { @include clearfix(); }

.view-nodes-by-category article {
  margin-bottom: 25px;

  > h2 { line-height: 25px; }

  > .breadcrumb {
    margin-bottom: 5px;
    text-transform: uppercase;
    font-weight: bold;

    > .creator { color: black; }
    > .created { color: #888; }

  }


  > div:last-child {
    text-transform: uppercase;
    text-align: right;
    padding-bottom: 3px;
    border-bottom: 1px solid #aaa;
    font-size: 11px;
    > a {
      color: #888;
    }
  }
}

.node {
  margin-bottom: 20px;
}

.comment-content .links,
.node > .links {
  margin-top: 10px;
  text-transform: uppercase;
  font-weight: bold;
}

.comment { 
  margin-bottom: 20px; 
  padding-top: 8px; 

  .submitted {
    margin-top: 10px;
    font-style: italic;
  }
}
.comment > table td { vertical-align: top; }
.comment .comment-author {
  .views-row {
    padding: 10px; 
    width: 170px;
    margin-right: 10px;
    margin-top: 5px;
    background-color: rgb(239, 239, 239);
  }
  .views-field-phpcode {
    clear: both;
  }
  .views-field-value {
    font-style: italic;
    margin-top: 5px;
  }
}

.column-content .picture img {
  border: 4px solid #000;
}

.view-user-profile-box .badge { 
  display: inline-block; 
  padding: 0 3px;
  color: #fff; 
  text-transform: uppercase; 
  font-size: 11px; 
}
.badge.newbie { background-color: #89aa00; }
.badge.member { background-color: #fc6b00; }
.badge.accomplished { background-color: #191919; }
.badge.pro { background-color: #356fce; }
.badge.expert { background-color: #a80f00; }

.community .poll > .bar > .foreground {
  background-color: $pollBarColor;
}

.column-nav .poll {
  > .title {
    margin-bottom: 5px;
  }
  > .text {
    margin-bottom: 2px;
  }

}

.kb-toggle {
  display: none;
}

.all-attached-images {
  display: none;
}

/* Voting on Ideas */
td.views-field-vud-node-widget {
  width: 55px;
}
.community .vud-widget-updown .updown-down,
.community .vud-widget-updown .vud-link-down,
{
  float: right;
}

/* Ideas table generation doesn't generate separate divs because it is using the view Table layout */
.view-Ideas .views-table .views-field-title {
  font-size: 13px;
  line-height: 1.4em;

  a:first-child {
    font-size: 16px;
    line-height: 1.2em;
  }
}

.vud-widget-updown > div.down-active {
  background: $openshiftRed;
  color: black;
  border-color: black;
}

.vud-widget-updown > div.up-active {
  background: $genericLightGreen;
  color: black;
  border-color: black;
}

/* copied from system.css */
html.js fieldset.collapsed {
    border-bottom-width: 0;
    border-left-width: 0;
    border-right-width: 0;
    height: 1em;
    margin-bottom: 0;
}
html.js fieldset.collapsed * {
    display: none;
}
html.js fieldset.collapsed legend {
    display: block;
}
html.js fieldset.collapsible legend a {
    background: url("../images/menu-expanded.png") no-repeat scroll 5px 75% transparent;
    padding-left: 15px;
}
html.js fieldset.collapsed legend a {
    background-image: url("../images/menu-collapsed.png");
    background-position: 5px 50%;
}
* html.js fieldset.collapsed legend, * html.js fieldset.collapsed legend *, * html.js fieldset.collapsed table * {
    display: inline;
}
html.js fieldset.collapsible {
    position: relative;
}
html.js fieldset.collapsible legend a {
    display: block;
}
html.js fieldset.collapsible .fieldset-wrapper {
    overflow: auto;
}

/* side column */
.sidenav-column-inner {
  margin-right: 15px;
}


/* New comment thread styles */

.comment-author {
	position: relative;
	img {
	  float: left;
	  }
}
.about-author {
	color: #909090;
}
.author-meta {
	margin-left: 60px;
	strong {
		font-size: 150%;
		padding-right: 13px;
		}
}
.submitted {
	font-style: italic;
	color: #b0b0b0;
	float: right;
}
.comment-text {
	border: 1px solid #ddd;
	border-top: 5px solid #ddd;
	padding: 13px 21px 8px;
	margin: 10px 0 30px;
	overflow: hidden;
}
.comment-meta {
	float: right;
 }
.children {
	margin-left: 21px;
	list-style: none;
}
.author-avatar {
	float: right;
}
.badge {
	display: inline-block;
  padding: 0 3px;
  margin: 0;
  color: #fff;
  font-size: 11px;
 }
.rank {
	border: 1px solid #999;
  color: #909090;
  display: inline-block;
  font-size: 11px;
  padding: 0;
  white-space: nowrap;
  float: right;
	span {
		padding: 0 5px;
		}
}
.thread {
	margin-bottom: 70px;
}
.thread-author .rank {
	float: none;
}
.thread-intro {
	padding-bottom: 8px;
}
.thread-text {
	padding: 20px;
	margin-bottom: 10px;
	background-color: #f0f0f0;
}
.posting {
	font-style: italic;
	color: #b0b0b0;
}
.thread-actions {
	margin: 5px 5px 5px 21px;
}
.thread-actions li {
	margin-right: 40px;
}

